# asciimation

./: CMakeLists.txt  README.md  build.sh  env.sh  install.sh
examples/: bunny  dads_birthday  dads_birthday.asciimation  hello_world  octo  octobanana  plane  simple
src/: ansi_escape_codes.cc  ansi_escape_codes.hh  asciimation.cc  asciimation.hh  color.hh  main.cc  parg.hh  term.hh
